--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,7 @@
         <li><a href="https://github.com/19Kushagra">Github</a></li>
         <li><a href="https://www.linkedin.com/in/kushagra-sharma-698175259/">Linkden</a></li>
         <li><a href="https://twitter.com/Kushagr42089392">Twitter</a></li>
-        <li><a href="">cipher1902@gmail.com</a></li>
-
-
+        <li>cipher1902@gmail.com</li>
     </ul>
 </body>
 </html>
