--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Resume</title>
 </head>
 <body>
-    <h3 style="color:#808080" align="right">Kushagra Sharma </h3> 
+    <h3 align="right">Kushagra Sharma </h3> 
     <img src="./images/MyImg1.jpg" alt="Kushagra Image" width="200" align="left">
     <br />
     <br />
@@ -19,7 +19,7 @@
     <br><br><br>
     <h3>Skills I am currently devloping.</h3>
     <ul>
-        <li>Web Devlopment</li>
+        <li><a href="https://19kushagra.github.io/html-portfolio/">Web Devlopment</a></li>
         <li>Kubernetes</li>
         <li><a href="https://leetcode.com/19Kushagra/">Algorithmic Problem-Solving</a></li>
         <li><a href="https://hashnode.com/@19kushagra">Writing Blogs</a></li>
